# pptx-slide-merger

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: architecture.md
mcp_server/: README.md  __init__.py
pptx_slide_merger/: __init__.py  cli.py  merger.py  review.py  review_server.py
skill/: README.md  pptx-manager.md
tests/: test_merger.py
