[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-slide-merger"
version = "0.1.0"
description = "Copy slides between PowerPoint files preserving original layouts, masters, themes, and media"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Robert Wunsch" },
]
dependencies = [
    "python-pptx>=1.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
pptx-merge = "pptx_slide_merger.cli:main"
